fixed Overlapping issues

--- a/client/src/Pages/Footer/Accessibility/Accessibility.css
+++ b/client/src/Pages/Footer/Accessibility/Accessibility.css
@@ -1,3 +1,7 @@
+
+.accessibility-container h1:first-child {
+    margin-top: 4rem; 
+}
 .accessibility-container {
     max-width: 800px;
     margin: 0 auto;
